--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon"  href="https://res.cloudinary.com/dnnigh3iz/image/upload/v1716837702/vkl4cbujq4t2gtynhtwt.webp"  style="border-radius: 50%;">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexa Constructora®</title>
+    <title>Nexa Constructora</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   <body class="font-Rubik">
