--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon"  href="https://res.cloudinary.com/dnnigh3iz/image/upload/v1716837702/vkl4cbujq4t2gtynhtwt.webp"  style="border-radius: 50%;">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexa Constructora</title>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="NEXA Constructora Desarrollista - Proyectos inmobiliarios de alta calidad, con diseños innovadores y sostenibles." />
+    <meta name="keywords" content="constructora, casas prefabricadas, proyectos inmobiliarios, construcción sostenible" />
+    <title>NEXA</title>
   </head>
-  <body class="font-Rubik">
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
