--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,11 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="NEXA Constructora Desarrollista - Proyectos inmobiliarios de alta calidad, con diseños innovadores y sostenibles." />
   <meta name="keywords" content="constructora, casas prefabricadas, proyectos inmobiliarios, construcción sostenible" />
+
+  <meta property="og:title" content="NEXA - Proyectos Inmobiliarios de Alta Calidad" />
+  <meta property="og:description" content="Diseños innovadores y sostenibles para tu nuevo hogar. Conocé nuestros modelos de casas." />
+  <meta property="og:image" content="https://tusitio.com/og-image.jpg" />
+  <meta property="og:url" content="https://tusitio.com" />
+
   <title>NEXA</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <!-- ✨ Bienvenido a NEXA ✨
+    Si estás leyendo esto, probablemente seas desarrollador.
+    ¿Querés trabajar con nosotros? Visitá: /contacto 😉 -->
+  <div id="root" aria-label="Aplicación principal de NEXA"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
